@@ -13,7 +13,7 @@ use Cwd;
 use vars qw( $VERSION @ISA );
 
 BEGIN {
-    $VERSION = '1.27_01';
+    $VERSION = '1.28';
     @ISA     = qw( Archive::Zip );
 }
 
