@@ -4,7 +4,7 @@ use strict;
 use vars qw( $VERSION @ISA );
 
 BEGIN {
-    $VERSION = '1.27_01';
+    $VERSION = '1.28';
     @ISA     = qw ( Archive::Zip::FileMember );
 }
 
