@@ -1,7 +1,12 @@
 Revision history for Perl extension Archive-Zip
 
 1.27_02
-	- Switched from Compress::Zlib to Compress::Raw::Zlib.
+	- Reverted to revision 4736 and converted `External File Attribute'
+	  values for symbolic links to hexadecimal (HAGGAI)
+	- Fixed: #15026: AddTree does not include files with german
+	  umlauts in the filename (HAGGAI)
+	- Switched from Compress::Zlib to Compress::Raw::Zlib (AGRUNDMA)
+	- Moved crc32 from bin to script (ADAMK)
 
 1.27_01 Tue 16 Dec 2008 - Adam Kennedy
 	- Makefile.PL will create a better META.yml
